<resources>
    <string name="app_name">ServerStatusNotifier</string>
    <string name="notif_channel">SSN_CH</string>
    <string name="action_settings">Settings</string>
    <string name="conn_new_server_timeout">Connection to server has timed out. Server is off, does not have installed plugin or typed invalid IP.</string>
    <string name="conn_server_timeout">Connection to server has timed out. Returned to server list.</string>
    <string name="invalid_ip">Invalid server address</string>
    <string name="common_close">Close</string>
    <string name="common_add">Add</string>
    <string name="common_online">Online</string>
    <string name="common_offline">Offline</string>
    <string name="about_author">Author: grzegorzekkk</string>
    <string name="server_ip">Server IP</string>
    <string name="server_ip_hint">IP of spigot server</string>
    <string name="notifier_port">Notifier port</string>
    <string name="server_password">Server password</string>
    <string name="notification_title">Alert! Offline server(s)</string>
    <string name="notification_description">Notifier has found %s of your servers offline. Tap to open Notifier app.</string>
    <string name="details_player_count">Online players:</string>
    <string name="value_of_format">%s / %s</string>
    <string name="server_version">Server version:</string>
    <string name="dialog_delete_ask">Are you sure to delete this server from the list?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>
