<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/plank_background">

    <TextView
        android:id="@+id/dialogServerIPLabel"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/dialog_delete_ask"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogServerIPLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/minecraft"
            android:text="@string/yes" />

        <Button
            android:id="@+id/cancel_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/minecraft"
            android:text="@string/no" />

    </LinearLayout>

</RelativeLayout>